# Course5

./: .env  .env_sample  .flake8  pyproject.toml
config/: celery.py  settings.py  urls.py
habbits/: apps.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habbits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
